@@ -1,4 +1,4 @@
-This is vsftpd, version 2.1.1
+This is vsftpd, version 2.1.2
 Author: Chris Evans
 Contact: scarybeasts@gmail.com
 Website: http://vsftpd.beasts.org/
