@@ -1,7 +1,7 @@
 #ifndef VSF_VERSION_H
 #define VSF_VERSION_H
 
-#define VSF_VERSION "2.1.1"
+#define VSF_VERSION "2.1.2"
 
 #endif /* VSF_VERSION_H */
 
